--- a/test/fixtures/dogs.yml
+++ b/test/fixtures/dogs.yml
@@ -15,3 +15,23 @@ two:
   med_cond: MyString
   vet: MyString
   dob: 2015-11-11
+
+# == Schema Information
+#
+# Table name: dogs
+#
+#  id         :integer          not null, primary key
+#  name       :string
+#  breed_id   :integer
+#  owner_id   :integer
+#  med_cond   :string
+#  vet        :string
+#  dob        :date
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+# Indexes
+#
+#  index_dogs_on_breed_id  (breed_id)
+#  index_dogs_on_owner_id  (owner_id)
+#
