added file uploads, changed range of DOB collection select

--- a/test/fixtures/dogs.yml
+++ b/test/fixtures/dogs.yml
@@ -20,15 +20,19 @@ two:
 #
 # Table name: dogs
 #
-#  id         :integer          not null, primary key
-#  name       :string
-#  breed_id   :integer
-#  owner_id   :integer
-#  med_cond   :string
-#  vet        :string
-#  dob        :date
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id                  :integer          not null, primary key
+#  name                :string
+#  breed_id            :integer
+#  owner_id            :integer
+#  med_cond            :string
+#  vet                 :string
+#  dob                 :date
+#  created_at          :datetime         not null
+#  updated_at          :datetime         not null
+#  avatar_file_name    :string
+#  avatar_content_type :string
+#  avatar_file_size    :integer
+#  avatar_updated_at   :datetime
 #
 # Indexes
 #
